--- a/run_compare.ipynb
+++ b/run_compare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>best_fitness</th>\n",
        "      <th>best_fitness_representation</th>\n",
        "      <th>best_fit_length</th>\n",
@@ -51,7 +50,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>2450.0</td>\n",
        "      <td>[-0.407, -0.208, -0.156, -0.571, -0.043, 0.031...</td>\n",
        "      <td>3.0</td>\n",
@@ -63,7 +61,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>2450.0</td>\n",
        "      <td>[-0.887, 0.913, -0.403, -0.595, 0.164, -0.465,...</td>\n",
        "      <td>3.0</td>\n",
@@ -75,7 +72,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>2450.0</td>\n",
        "      <td>[-0.8353822482597213, -0.944363939074212, 0.85...</td>\n",
        "      <td>3.0</td>\n",
@@ -87,7 +83,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>2450.0</td>\n",
        "      <td>[-0.8353822482597213, -0.944363939074212, 0.85...</td>\n",
        "      <td>3.0</td>\n",
@@ -99,7 +94,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>2450.0</td>\n",
        "      <td>[-0.312, -0.036, 0.199, 0.378, 0.307, -0.237, ...</td>\n",
        "      <td>3.0</td>\n",
@@ -119,11 +113,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>194</th>\n",
-       "      <td>194</td>\n",
        "      <td>2600.0</td>\n",
        "      <td>[0.7308265300033827, 0.40056161228229725, 0.52...</td>\n",
        "      <td>4.0</td>\n",
@@ -135,7 +127,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>195</th>\n",
-       "      <td>195</td>\n",
        "      <td>2600.0</td>\n",
        "      <td>[0.7308265300033827, 0.40056161228229725, 0.52...</td>\n",
        "      <td>4.0</td>\n",
@@ -147,7 +138,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
-       "      <td>196</td>\n",
        "      <td>2600.0</td>\n",
        "      <td>[0.7308265300033827, 0.40056161228229725, 0.52...</td>\n",
        "      <td>4.0</td>\n",
@@ -159,7 +149,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>197</td>\n",
        "      <td>2600.0</td>\n",
        "      <td>[0.7308265300033827, 0.40056161228229725, 0.52...</td>\n",
        "      <td>4.0</td>\n",
@@ -171,7 +160,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
-       "      <td>198</td>\n",
        "      <td>2600.0</td>\n",
        "      <td>[0.7308265300033827, 0.40056161228229725, 0.52...</td>\n",
        "      <td>4.0</td>\n",
@@ -183,66 +171,53 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>199 rows × 9 columns</p>\n",
+       "<p>199 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Unnamed: 0  best_fitness  \\\n",
-       "0             0        2450.0   \n",
-       "1             1        2450.0   \n",
-       "2             2        2450.0   \n",
-       "3             3        2450.0   \n",
-       "4             4        2450.0   \n",
-       "..          ...           ...   \n",
-       "194         194        2600.0   \n",
-       "195         195        2600.0   \n",
-       "196         196        2600.0   \n",
-       "197         197        2600.0   \n",
-       "198         198        2600.0   \n",
+       "     best_fitness                        best_fitness_representation  \\\n",
+       "0          2450.0  [-0.407, -0.208, -0.156, -0.571, -0.043, 0.031...   \n",
+       "1          2450.0  [-0.887, 0.913, -0.403, -0.595, 0.164, -0.465,...   \n",
+       "2          2450.0  [-0.8353822482597213, -0.944363939074212, 0.85...   \n",
+       "3          2450.0  [-0.8353822482597213, -0.944363939074212, 0.85...   \n",
+       "4          2450.0  [-0.312, -0.036, 0.199, 0.378, 0.307, -0.237, ...   \n",
+       "..            ...                                                ...   \n",
+       "194        2600.0  [0.7308265300033827, 0.40056161228229725, 0.52...   \n",
+       "195        2600.0  [0.7308265300033827, 0.40056161228229725, 0.52...   \n",
+       "196        2600.0  [0.7308265300033827, 0.40056161228229725, 0.52...   \n",
+       "197        2600.0  [0.7308265300033827, 0.40056161228229725, 0.52...   \n",
+       "198        2600.0  [0.7308265300033827, 0.40056161228229725, 0.52...   \n",
        "\n",
-       "                           best_fitness_representation  best_fit_length  \\\n",
-       "0    [-0.407, -0.208, -0.156, -0.571, -0.043, 0.031...              3.0   \n",
-       "1    [-0.887, 0.913, -0.403, -0.595, 0.164, -0.465,...              3.0   \n",
-       "2    [-0.8353822482597213, -0.944363939074212, 0.85...              3.0   \n",
-       "3    [-0.8353822482597213, -0.944363939074212, 0.85...              3.0   \n",
-       "4    [-0.312, -0.036, 0.199, 0.378, 0.307, -0.237, ...              3.0   \n",
-       "..                                                 ...              ...   \n",
-       "194  [0.7308265300033827, 0.40056161228229725, 0.52...              4.0   \n",
-       "195  [0.7308265300033827, 0.40056161228229725, 0.52...              4.0   \n",
-       "196  [0.7308265300033827, 0.40056161228229725, 0.52...              4.0   \n",
-       "197  [0.7308265300033827, 0.40056161228229725, 0.52...              4.0   \n",
-       "198  [0.7308265300033827, 0.40056161228229725, 0.52...              4.0   \n",
+       "     best_fit_length  best_fit_steps  average_fitness  phenotypic_variance  \\\n",
+       "0                3.0          2000.0      1538.226667             974631.0   \n",
+       "1                3.0          2000.0      1487.080000             977008.0   \n",
+       "2                3.0          2000.0      1614.173333             923503.0   \n",
+       "3                3.0          2000.0      1450.080000             992185.0   \n",
+       "4                3.0          2000.0      1483.026667             993571.0   \n",
+       "..               ...             ...              ...                  ...   \n",
+       "194              4.0          2000.0      1572.680000             968394.0   \n",
+       "195              4.0          2000.0      1584.960000             938596.0   \n",
+       "196              4.0          2000.0      1327.240000            1027572.0   \n",
+       "197              4.0          2000.0      1677.160000             894389.0   \n",
+       "198              4.0          2000.0      1405.040000            1005099.0   \n",
        "\n",
-       "     best_fit_steps  average_fitness  phenotypic_variance  genotypic_variance  \\\n",
-       "0            2000.0      1538.226667             974631.0             3.51239   \n",
-       "1            2000.0      1487.080000             977008.0             8.26268   \n",
-       "2            2000.0      1614.173333             923503.0             3.72723   \n",
-       "3            2000.0      1450.080000             992185.0             4.26947   \n",
-       "4            2000.0      1483.026667             993571.0             3.55785   \n",
-       "..              ...              ...                  ...                 ...   \n",
-       "194          2000.0      1572.680000             968394.0             0.66860   \n",
-       "195          2000.0      1584.960000             938596.0             0.50595   \n",
-       "196          2000.0      1327.240000            1027572.0             0.21063   \n",
-       "197          2000.0      1677.160000             894389.0             0.79821   \n",
-       "198          2000.0      1405.040000            1005099.0             0.38118   \n",
+       "     genotypic_variance        time  \n",
+       "0               3.51239    5.269349  \n",
+       "1               8.26268    7.792265  \n",
+       "2               3.72723   10.607546  \n",
+       "3               4.26947   13.071287  \n",
+       "4               3.55785   15.617349  \n",
+       "..                  ...         ...  \n",
+       "194             0.66860  524.894123  \n",
+       "195             0.50595  527.661069  \n",
+       "196             0.21063  529.844014  \n",
+       "197             0.79821  532.784451  \n",
+       "198             0.38118  535.138280  \n",
        "\n",
-       "           time  \n",
-       "0      5.269349  \n",
-       "1      7.792265  \n",
-       "2     10.607546  \n",
-       "3     13.071287  \n",
-       "4     15.617349  \n",
-       "..          ...  \n",
-       "194  524.894123  \n",
-       "195  527.661069  \n",
-       "196  529.844014  \n",
-       "197  532.784451  \n",
-       "198  535.138280  \n",
-       "\n",
-       "[199 rows x 9 columns]"
+       "[199 rows x 8 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,8 +239,44 @@
     "\n",
     "\n",
     "\n",
-    "single_alg_dataframe_importer(\"./results/spec_1/\")[0]\n"
+    "single_alg_dataframe_importer(\"./results/spec_2/\")[0]\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "816.6666666666666"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def avg_fitness_per_gen(algo_1_path):\n",
+    "\n",
+    "    for df in algo_1_path:\n",
+    "        total_fitness = 0\n",
+    "        total_fitness += df.iloc[0,0]\n",
+    "        average_fitness = total_fitness/len(algo_1_path)\n",
+    "    return average_fitness\n",
+    "\n",
+    "avg_fitness_per_gen(single_alg_dataframe_importer(\"./results/spec_1/\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
